--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     </div>
                 </div>
             </section>
-            <section class="textos-habilidades" data-aos="fade-up" data-aos-duration="2000">
+            <section class="textos-habilidades" data-aos="zoom-in" data-aos-duration="500">
                 <h1>Competencias</h1>
                 <h2>Conoce mis habilidades en el mundo del desarrollo.</h2>
                 <p>En este apartado podrás acceder a un repositorio en el cual podrás encontrar:</p>
@@ -243,7 +243,7 @@
 
     <footer>
         <div class="partFooter">
-            <img src="img/logo 3.png" alt="">
+            <img src="img/logoTop.png" alt="">
         </div>
         <div class="partFooter">
             <h4>Redes sociales</h4>
