--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Marco D. González | Portafolio</title>
+    <title>Marco González G. | Portafolio</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700&display=swap" rel="stylesheet">
@@ -23,7 +23,7 @@
                 <div class="logo">
                     <img src="img/logoTop.png" alt="">
                 </div>
-                <div class="enlaces-header">
+                <div class="links-header">
                     <a href="#top">Inicio</a>
                     <a href="#S2">Proyectos</a>
                     <a href="#S3">Sobre mi</a>
@@ -37,23 +37,28 @@
         </nav>
     </header>
 
+
+
     <!-- Sección 1 -->
-    <section class="seccion1 contenedor">
-        <div class="textos-header">
+    <section class="contenedor seccion1">
+
+        <div class="text-header">
             <h2 data-aos="fade-up" data-aos-duration="1000"><big>
                     <FONT COLOR="#24acf2"><b>¡Hola!</b></FONT>
-                </big>, mi nombre es...</h2>
+                </big> mi nombre es...</h2>
             <h1 data-aos="fade-up" data-aos-duration="1500">Marco González G.</h1>
             <p data-aos="fade-up" data-aos-duration="2000">&#60;<span class="typed"></span>&#47;&gt;</p>
             <a href="#S3" data-aos="fade-up" data-aos-duration="2000">Sobre mi</a>
         </div>
+
         <div class="img-header">
             <img src="img/Imagen1.svg" data-aos="fade-up" data-aos-duration="500" alt="">
         </div>
 
     </section>
-
     <div id="S2" class="separador"></div>
+
+
 
     <!-- Sección 2 -->
     <section class="seccion2">
@@ -94,13 +99,14 @@
             </div>
         </div>
     </section>
-
-    <!-- Seccion 3 -->
     <div id="S3" class="separador"></div>
 
-    <section class="questions contenedor">
+
+
+    <!-- Seccion 3 -->
+    <section class="seccion3 contenedor">
         <img src="img/segundaimagen.svg" data-aos="zoom-out" alt="">
-        <section class="textos-questions" data-aos="zoom-out">
+        <section class="text-aboutme" data-aos="zoom-out">
             <h1 class="titulo">Sobre mi</h1>
             <p class="descSobreMi"><big>
                     <FONT COLOR="#24acf2"><b>¡Hola!</b></FONT>
@@ -127,13 +133,15 @@
             </div>
             <div class="puntSobreMi">
                 <p class="dato">Página Web:</p>
-                <p class="resp"><a href="#">Mi link</a></p>
+                <p class="resp"><a href="https://marcod-gg.github.io/Portafolio/" target="_blank">marcod-gg.github.io/Portafolio</a></p>
             </div>
         </section>
     </section>
-
     <div id="S4" class="separador"></div>
 
+
+
+    <!-- Sección 4 -->
     <section class="seccion4">
         <div class="contenedor habilidades">
             <section class="barras">
@@ -193,25 +201,27 @@
                 </div>
             </section>
             <section class="textos-habilidades" data-aos="zoom-in" data-aos-duration="500">
-                <h1>Competencias</h1>
-                <h2>Conoce mis habilidades en el mundo del desarrollo.</h2>
+                <h1 class="titulo">Competencias</h1>
+                <h2 class="subtitulo">Conoce mis habilidades en el mundo del desarrollo.</h2>
                 <p>En este apartado podrás acceder a un repositorio en el cual podrás encontrar:</p>
                 <div class="link-habilidades">
-                    <a href="#">Mis certificados</a>
-                    <a href="#">Mi curriculum</a>
+                    <a href="https://drive.google.com/drive/folders/1wGgwGpYaIBzt0HyVlprVOmMIOVRW2HYs?usp=sharing">Mis certificados</a>
+                    <a href="resources/CV-MARCOGG.pdf" target="_blank">Mi curriculum</a>
                 </div>
             </section>
         </div>
     </section>
-
     <div id="S5" class="separador"></div>
 
+
+
+    <!-- Seccion 5 -->
     <section class="contenedor seccion5" data-aos="fade-up" data-aos-duration="500">
-        <div class="titulo-aptitudes">
-            <h1>Aptitudes</h1>
-            <h2>Conoce mis habilidades en un ambiente laboral</h2>
+        <div class="text-aptitudes">
+            <h1 class="titulo">Aptitudes</h1>
+            <h2 class="subtitulo">Conoce mis habilidades en un ambiente laboral</h2>
         </div>
-        <div class="caja-aptitudes">
+        <div class="box-aptitudes">
             <div class="aptitud" data-aos="fade-right" data-aos-duration="1000">
                 <img src="img/Iniciativa.svg" alt="">
                 <h2 class="texto-aptitud1">Capacidad de iniciativa</h2>
@@ -238,9 +248,11 @@
             </div>
         </div>
     </section>
-
     <div class="separador"></div>
 
+
+
+    <!-- Footer -->
     <footer>
         <div class="partFooter">
             <img src="img/logoTop.png" alt="">
@@ -260,10 +272,17 @@
             <p class="fono">+56 9 4553 5865</p>
         </div>
     </footer>
+
+
+
+    <!-- Scripts -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/07a06ba78a.js" crossorigin="anonymous"></script>
     <script src="js/typed.js"></script>
     <script src="js/main.js"></script>
+
+
+
 </body>
 
 </html>
